style: add style properties for the card__one

--- a/index.html
+++ b/index.html
@@ -13,24 +13,32 @@
     <title>Bento grid</title>
   </head>
   <body>
-    <main>
-      <section>
-        Social Media 10x Faster with AI Over 4,000 5-star reviews
+    <main class="container">
+      <section class="card card__one">
+        <h1 class="card__title">Social Media <strong>10x</strong> <em>Faster</em> with AI</h1>
+        <div>
+          <img
+            src="./assets/images/illustration-five-stars.webp"
+            alt="5-star rating"
+            class="card__img"
+          />
+          <p class="card__text">4,000 5-star reviews</p>
+        </div>
       </section>
-      <section>Manage multiple accounts and platforms.</section>
-      <section>Maintain a consistent posting schedule.</section>
-      <section>
+      <section class="card card__two">Manage multiple accounts and platforms.</section>
+      <section class="card card__three">Maintain a consistent posting schedule.</section>
+      <section class="card card__four">
         Schedule to social media. Optimize post timings to publish content at
         the perfect time for your audience.
       </section>
 
-      <section>Grow followers with non-stop content.</section>
+      <section class="card card__five">Grow followers with non-stop content.</section>
 
-      <section>>56% faster audience growth</section>
+      <section class="card card__six">">>56% faster audience growth</section>
 
-      <section>Create and schedule content quicker.</section>
+      <section class="card card__seven">Create and schedule content quicker.</section>
 
-      <section>Write your content using AI.</section>
+      <section class="card card__eight">Write your content using AI.</section>
     </main>
   </body>
 </html>
