--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <body>
     <main class="container">
       <section class="card card__one">
-        <h1 class="card__title">Social Media <strong>10x</strong> <em>Faster</em> with AI</h1>
+        <h1 class="card__title">
+          Social Media <strong>10x</strong> <em>Faster</em> with AI
+        </h1>
         <div>
           <img
             src="./assets/images/illustration-five-stars.webp"
@@ -25,18 +27,35 @@
           <p class="card__text">4,000 5-star reviews</p>
         </div>
       </section>
-      <section class="card card__two">Manage multiple accounts and platforms.</section>
-      <section class="card card__three">Maintain a consistent posting schedule.</section>
+      <section class="card card__two">
+        <img
+          src="./assets/images/illustration-multiple-platforms.webp"
+          alt=""
+          class="card__img"
+        />
+        <p class="card__text">Manage multiple accounts and platforms.</p>
+      </section>
+      <section class="card card__three">
+        <p>Maintain a consistent posting schedule.</p>
+        <img
+          src="./assets/images/illustration-consistent-schedule.webp"
+          alt="Schedule image"
+        />
+      </section>
       <section class="card card__four">
         Schedule to social media. Optimize post timings to publish content at
         the perfect time for your audience.
       </section>
 
-      <section class="card card__five">Grow followers with non-stop content.</section>
+      <section class="card card__five">
+        Grow followers with non-stop content.
+      </section>
 
       <section class="card card__six">">>56% faster audience growth</section>
 
-      <section class="card card__seven">Create and schedule content quicker.</section>
+      <section class="card card__seven">
+        Create and schedule content quicker.
+      </section>
 
       <section class="card card__eight">Write your content using AI.</section>
     </main>
