--- a/index.html
+++ b/index.html
@@ -40,24 +40,42 @@
         <img
           src="./assets/images/illustration-consistent-schedule.webp"
           alt="Schedule image"
+          class="card__img"
         />
       </section>
       <section class="card card__four">
-        Schedule to social media. Optimize post timings to publish content at
-        the perfect time for your audience.
+        <h2 class="card__title">Schedule to social media.</h2>
+        <img
+          src="./assets/images/illustration-schedule-posts.webp"
+          alt="Calendar illustration"
+          class="card__img"
+        />
+        <p class="card__text">
+          Optimize post timings to publish content at the perfect time for your
+          audience.
+        </p>
       </section>
 
       <section class="card card__five">
-        Grow followers with non-stop content.
+        <img src="./assets/images/illustration-grow-followers.webp" alt="" />
+        <p>Grow followers with non-stop content.</p>
       </section>
 
-      <section class="card card__six">">>56% faster audience growth</section>
+      <section class="card card__six">
+        <h2>>56%</h2>
+        <p>faster audience growth</p>
+        <img src="./assets/images/illustration-grow-followers.webp" alt="" />
+      </section>
 
       <section class="card card__seven">
-        Create and schedule content quicker.
+        <p>Create and schedule content quicker.</p>
+        <img src="./assets/images/illustration-create-post.webp" alt="" />
       </section>
 
-      <section class="card card__eight">Write your content using AI.</section>
+      <section class="card card__eight">
+        <h2>Write your content using AI.</h2>
+        <img src="./assets/images/illustration-ai-content.webp" alt="" />
+      </section>
     </main>
   </body>
 </html>
