style: add css for the fifth card dedicated to growing the followers

--- a/index.html
+++ b/index.html
@@ -57,14 +57,18 @@
       </section>
 
       <section class="card card__five">
-        <img src="./assets/images/illustration-grow-followers.webp" alt="" />
-        <p>Grow followers with non-stop content.</p>
+        <img
+          src="./assets/images/illustration-grow-followers.webp"
+          alt=""
+          class="card__img"
+        />
+        <p class="card__text">Grow followers with non-stop content.</p>
       </section>
 
       <section class="card card__six">
         <h2>>56%</h2>
         <p>faster audience growth</p>
-        <img src="./assets/images/illustration-grow-followers.webp" alt="" />
+        <img src="./assets/images/illustration-audience-growth.webp" alt="" />
       </section>
 
       <section class="card card__seven">
