--- a/index.html
+++ b/index.html
@@ -66,19 +66,21 @@
       </section>
 
       <section class="card card__six">
-        <h2>>56%</h2>
-        <p>faster audience growth</p>
-        <img src="./assets/images/illustration-audience-growth.webp" alt="" />
+        <div>
+        <h2 class="card__title">>56%</h2>
+        <p class="card__text">faster audience growth</p>
+        </div>
+        <img src="./assets/images/illustration-audience-growth.webp" alt="" class="card__img"/>
       </section>
 
       <section class="card card__seven">
-        <p>Create and schedule content quicker.</p>
-        <img src="./assets/images/illustration-create-post.webp" alt="" />
+        <h2 class="card__title">Create and schedule content <span class="quicker">quicker.</span></h2>
+        <img src="./assets/images/illustration-create-post.webp" alt="" class="card__img"/>
       </section>
 
       <section class="card card__eight">
-        <h2>Write your content using AI.</h2>
-        <img src="./assets/images/illustration-ai-content.webp" alt="" />
+        <h2 class="card__title">Write your content using AI.</h2>
+        <img src="./assets/images/illustration-ai-content.webp" alt="" class="card__img"/>
       </section>
     </main>
   </body>
